# hipaa-hermes-agent

./: .env.dev.example  .env.example  .env.prod.example  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml
crates/hermes/: Cargo.toml
crates/hermes/src/: audit.rs  auth.rs  config.rs  deid.rs  inference.rs  lib.rs  llm.rs  main.rs  metrics.rs  oidc.rs  policy.rs
crates/hermes/src/audit/: mod.rs  postgres.rs  sqlite.rs
crates/hermes/src/deid/: mod.rs  presidio.rs  risk.rs  safe_harbor.rs
crates/hermes/tests/: api.rs  deid_safe_harbor.rs
demo/: index.html  scenarios.json
deploy/: docker-compose.oidc.yml  docker-compose.postgres.yml  docker-compose.proxy.yml  docker-compose.vault.yml  docker-compose.yml
deploy/caddy/: Caddyfile.local
deploy/grafana/: hipaa-hermes-observability.json  hipaa-hermes-v1.json
deploy/keycloak/: hermes-realm.json
deploy/loki/: loki-config.yml
deploy/ollama/: Modelfile.biomistral
deploy/prometheus/: prometheus.yml
deploy/promtail/: promtail.yml
docs/: ARCHITECTURE.md  AUDIT_DB.md  DEMO_VIDEO.md  DEPLOYMENT_EPICS.md  GITHUB.md  LOCAL_STACK.md  MODELS.md  OIDC.md  PRE_CLIENT.md  Q12_PUBLICATION.md  README.md  SALES_DEMO.md  SCOPE.md  VAULT.md
scripts/: check-demo.sh  cleanup-space.sh  demo.sh  get-oidc-token.sh  migrate-audit-to-postgres.sh  observability.sh  open-demo.sh  run-with-tls.sh  run-with-vault.sh  run.sh  sales-demo.sh  setup-biomistral.sh  setup-keycloak.sh  setup-ollama.sh  setup-postgres.sh  setup-vault.sh  stop.sh  vault-fetch-secrets.sh
(+10 files in other folders)
