[package]
name = "hermes"
version.workspace = true
edition.workspace = true

[[bin]]
name = "hermes"
path = "src/main.rs"

[lib]
name = "hermes"
path = "src/lib.rs"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
ureq = { version = "2.9", features = ["json"] }
secrecy = { version = "0.8", features = ["serde"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
prometheus = "0.13"
lazy_static = "1.4"
thiserror = "1.0"
regex = "1.10"

[dev-dependencies]
tempfile = "3.10"
http-body-util = "0.1"
tower = { version = "0.4", features = ["util"] }
